# ripthatset

./: README.md  detections.json  detections_uberkikz.json  pyproject.toml
docs/: PROXIES.md
ripthatset/: __init__.py  config.py  data_to_tidal.py  main.py  processor.py
ripthatset/acrcloud/: __init__.py  client.py
ripthatset/models/: __init__.py  progress.py  track.py
ripthatset/shazam/: __init__.py  client.py
ripthatset/utils/: __init__.py  audio.py  gaps.py
