[tool.poetry]
name = "ripthatset"
version = "0.1.0"
description = ""
authors = ["biscoito <biscoito@riseup.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
shazamio = "^0.7.0"
ipykernel = "^6.29.5"
typer = "^0.15.1"
tidalapi = "^0.8.3"

[tool.pyright]
venvPath = "/Users/biscoito/Library/Caches/pypoetry/virtualenvs"
venv = "/Users/biscoito/Library/Caches/pypoetry/virtualenvs/ripthatset-81WvY6ol-py3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
